test bug about collage gap 5

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -578,6 +578,7 @@
             order: 3
             height: 100%
             margin: 2px 0
+            display: none
         .B2
             order: 2
             height: 100%
